# awake

./: .release-notes  CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: build-lint-test.yml  release.yml
Formula/: awake.rb
man/: awake.1
script/: check.sh  manpage.sh  release.sh  test.sh
src/: main.rs
