# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package]
name = "awake"
version = "1.2.0"
edition = "2021"
authors = ["Nick Dower <nicholasdower@gmail.com>"]

[dependencies]
chrono = "0.4"
clap = { version = "4.5", features = ["derive"] }
core-foundation = "0.9.3"
daemonize = "0.5.0"
libloading = "0.8.1"
exec = "0.3.1"
signal-hook = "0.3.17"
