# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package]
name = "awake"
version = "2.1.0"
edition = "2021"
authors = ["Nick Dower <nicholasdower@gmail.com>"]

[dependencies]
chrono = "0.4"
clap = { version = "4.5", features = ["derive"] }
core-foundation = "0.9.3"
daemonize = "0.5.0"
exec = "0.3.1"
libloading = "0.8.3"
signal-hook = "0.3.17"
sysinfo = "0.30.5"
